--- a/CSS/style.css
+++ b/CSS/style.css
@@ -42,3 +42,20 @@ img {
     width: 50px;
     border-radius: 20px;
 }
+
+
+footer {
+    height: 120px;
+    width: 100%;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    position: absolute;
+    bottom: 0;
+    background-color: var(--box-bg-color);
+}
+
+footer p {
+    color: var(--main-color);
+    font-size: 15px;
+}
