--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -74,6 +74,19 @@ main h1{
     font-style: var(--text-style);
 }
 
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+     
+}
+
+.hero img {
+    width: 50%;
+    height: auto;
+    margin-top: 200px;
+}
+
 
 
 
