--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,7 +1,9 @@
 body {
-    height: 100vh;
-    width: 95%;
-    margin-top:80px;
+    margin: 0;
+    padding: 0;
+    height: 100vh; 
+    display: flex;
+    flex-direction: column; 
 }
 
 header {
@@ -57,17 +59,14 @@ img {
 
 }
 
-main{
+main {
+    flex: 1; 
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: var(--main-bg-color);
-    position: absolute;
-    top: 2;
-    right: 0;
-    left: 0;
-    margin-top: 55px;
-    
-    
+    margin-top: 140px;
+
 }
 main h1{
     color:var(--main-color);
@@ -99,7 +98,7 @@ main h1{
     width: 300px; 
     background-color: var(--box-bg-color);
     color:var(--main-color);
-     padding: 20px;
+    padding: 20px;
     text-align: center;
     justify-content: space-evenly;
     height:150px;
@@ -142,6 +141,54 @@ main h1{
 }
 
 
+footer {
+    height: 120px;
+    width: 100vw; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--box-bg-color);
+}
+
+footer p {
+    color: var(--main-color);
+    font-size: 15px;
+
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+
+    
+  }
+  .fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: black;
+    color: white;
+  }
+  
+  .fa-twitter {
+    background: black;
+    color: white;
+  }
+  .fa-linkedin {
+    background: black;
+    color: white;
+  }
+  
+  
+  .fa-instagram {
+    background: black;
+    color: white;
+  }
 
 
 
