--- a/CSS/services.css
+++ b/CSS/services.css
@@ -1,7 +1,8 @@
 .bg-img {
     background-image: url("../Pictures/Office.bild.jpg");
-    background-position: center;
-    background-attachment: fixed;
+
+
     width: 100%;
-    height: 750px;
+    height: 400px;
+    margin-top: 100px;
 }
