--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 body {
     height: 100vh;
-    width: 95%;
+    width: 100%;
+    margin: 0;
 }
 
 header {
@@ -61,9 +62,9 @@ footer {
     height: 120px;
     width: 100%;
     display: flex;
-    justify-content: center; 
-    align-items: center; 
-    position: absolute;
+    justify-content: center;
+    align-items: center;
+    position: relative;
     bottom: 0;
     background-color: var(--box-bg-color);
 }
@@ -71,8 +72,5 @@ footer {
 footer p {
     color: var(--main-color);
     font-size: 15px;
+
 }
-
-
-
-
