--- a/CSS/services.css
+++ b/CSS/services.css
@@ -6,3 +6,28 @@
     height: 400px;
     margin-top: 100px;
 }
+
+.services {
+    height: 200px;
+    width: 400px;
+    border: 1px solid black;
+    margin-bottom: 200px;
+    background: linear-gradient(239deg, #007bbd, #003f61);
+    position: relative;
+    top: 100px;
+    left: 70px;
+    opacity: 0.9;
+
+
+}
+
+.services,
+h2 {
+    color: white;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+    font-size: 60px;
+
+}
