Changed logo on all pages

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -55,11 +55,13 @@ header {
 
 
 
-img {
-    height: 50px;
-    width: 50px;
-    border-radius: 20px;
-
+img 
+{
+   
+        height: 60px;
+        width: 100%;
+        border-radius: 20px;
+    
 }
 
 main {
