--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -144,8 +144,8 @@ main h1{
 }
 
 
-.topligan-link:hover {
-    text-decoration: underline; 
+.info-box a:hover {
+    text-decoration: underline;
 }
 
 
@@ -188,6 +188,7 @@ footer p {
     opacity: 0.7;
 
 }
+
 
 
 
