--- a/CSS/services.css
+++ b/CSS/services.css
@@ -17,6 +17,7 @@
     top: 100px;
     left: 70px;
     opacity: 0.9;
+    font-family: var(--text-style);
 
 
 }
@@ -30,4 +31,35 @@ h2 {
     align-items: center;
     font-size: 60px;
 
+}
+
+.box1,
+.box2,
+.box3 {
+    display: inline-block;
+    height: 200px;
+    width: 400px;
+    border: 1px solid black;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: var(--main-bg-color);
+
+
+}
+
+.box1,
+.box2,
+.box3,
+h3 {
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-family: var(--text-style);
+}
+
+
+.boxar {
+    display: flex;
+    justify-content: center;
+    gap: 120px;
 }
