--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -116,8 +116,8 @@ main h1{
 }
 
 .info-box p {
-    font-size: 18px;
-    color: rgb(172, 163, 163); 
+   font-size: 18px;
+   color: var(--main-color);
     
 }
 .info-box a {
