--- a/CSS/startpage.css
+++ b/CSS/startpage.css
@@ -3,7 +3,7 @@
 background-image: url("../Pictures/skyscraper.jpg");
 background-position: center;
 background-attachment: fixed;
-width: 1440px;
+width: 100%;
 height: 750px;
 
 
