--- a/CSS/services.css
+++ b/CSS/services.css
@@ -1,7 +1,5 @@
 .bg-img {
     background-image: url("../Pictures/Office.bild.jpg");
-
-
     width: 100%;
     height: 400px;
     margin-top: 100px;
@@ -37,15 +35,11 @@ h2 {
 .box1,
 .box2,
 .box3 {
-    display: inline-block;
+    display: flex;
     height: 200px;
     width: 400px;
-    border: 1px solid black;
     margin-top: 20px;
     margin-bottom: 20px;
-
-
-
 }
 
 h3 {
@@ -59,8 +53,9 @@ h3 {
 .box3,
 h3 {
     color: white;
-    display: flex;
+    display: inline-block;
     justify-content: center;
+
     font-family: var(--text-style);
 }
 
@@ -69,6 +64,8 @@ h3 {
     display: flex;
     justify-content: center;
     gap: 120px;
+    line-height: 1.5;
+
 }
 
 img {
@@ -77,4 +74,37 @@ img {
     border-radius: 20px;
 
 
+}
+
+p {
+    color: black;
+    font-size: 17px;
+}
+
+label {
+    color: black;
+    display: inline-block;
+    cursor: pointer;
+    background-color: lightblue;
+    padding: 3px 10px;
+    border-radius: 10px;
+    margin-top: 10px;
+    width: 65px;
+}
+
+
+#ch {
+    display: none;
+}
+
+#ch:checked~.content {
+    display: block;
+}
+
+#ch:checked~label {
+    display: none;
+}
+
+.content {
+    display: none;
 }
