--- a/CSS/startpage.css
+++ b/CSS/startpage.css
@@ -1,3 +1,5 @@
+
+
 .background-image
 {
 background-image: url("../Pictures/skyscraper.jpg");
@@ -7,5 +9,42 @@ width: 100%;
 height: 750px;
 
 
+.text-box
+{
+    width: 90%;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+}
 
+}
+.btn
+{
+    display: inline-block;
+    text-decoration: none;
+    color: #fdfdfd;
+    border: 1px solid #007bbd;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+    top: 500px;
+    left: 600px;
+}
+
+.btn:hover
+{
+    border: 1px solid #007bbd;
+    background: #007bbd;
+    transition: 1s;
+}
+
+*{
+  margin: 0;
+  padding: 0;   
+  font-family: 'Source Sans Pro', sans-serif;
 }
