--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,7 +12,7 @@ header {
     gap: 0 6px;
     height: 35px;
     padding: 20px;
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
     left: 0;
