--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -15,7 +15,7 @@ header {
     gap: 0 6px;
     height: 35px;
     padding: 20px;
-    position: fixed;
+    position: relative;
     top: 0;
     right: 0;
     left: 0;
@@ -69,7 +69,6 @@ main {
     justify-content: center;
     align-items: center;
     background-color: var(--main-bg-color);
-    margin-top: 120px;
 
 }
 main h1{
@@ -152,10 +151,10 @@ main h1{
 
 
 footer {
-    height: 120px;
+    height: 140px;
     width: 100vw; 
     background-color: var(--box-bg-color);
-    position: fixed;
+    position: relative;
     bottom: 0;
     
 }
