--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,12 +62,11 @@ img {
 
 footer {
     height: 140px;
-    width: 100vw;
+    width: 100vw; 
     background-color: var(--box-bg-color);
     position: relative;
     bottom: 0;
-
-
+    
 }
 
 footer p {
@@ -76,5 +75,27 @@ footer p {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
+
+}
+
+.fa {
+    padding: 20px;
+    font-size: 50px;
+    width: 35px;
+    text-align: center;
+    text-decoration: none;
+    margin: 15px 10px;
+
+  }
+
+  
+  [class*="fa"]{
+    background-color: black;
+    color: white;
+  }
+
+
+  .fa:hover {
+    opacity: 0.7;
+
 }
