--- a/CSS/startpage.css
+++ b/CSS/startpage.css
@@ -8,6 +8,23 @@ background-attachment: fixed;
 width: 100%;
 height: 750px;
 
+}
+.Box-Description
+{
+  display: flex;
+  background-color: #007bbd;
+  position: relative;
+  top: 300px;
+  left: 575px;
+  height: 100px;
+  width: 300px;
+  opacity: 0.8;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 
 .text-box
 {
@@ -20,31 +37,29 @@ height: 750px;
     text-align: center;
 }
 
-}
+
 .btn
 {
     display: inline-block;
     text-decoration: none;
-    color: #fdfdfd;
-    border: 1px solid #007bbd;
+    color: #000000;
+    border: 1px solid #ffffff;
     padding: 12px 34px;
     font-size: 13px;
     background: transparent;
     position: relative;
     cursor: pointer;
-    top: 600px;
     left: 600px;
+    top: 350px;
+    background-color: #007bbd;
+    
 }
 
 .btn:hover
 {
     border: 1px solid #007bbd;
-    background: #007bbd;
+    background: #ffffff;
     transition: 1s;
 }
 
-*{
-  margin: 0;
-  padding: 0;   
-  font-family: 'Source Sans Pro', sans-serif;
-}
+
