--- a/CSS/startpage.css
+++ b/CSS/startpage.css
@@ -23,6 +23,7 @@ height: 750px;
   align-items: center;
   justify-content: center;
   text-align: center;
+  font-family: var(--text-style);
 }
 
 
@@ -35,6 +36,7 @@ height: 750px;
     left: 50%;
     transform: translate(-50%,-50%);
     text-align: center;
+    font-family: var(--text-style);
 }
 
 
@@ -49,10 +51,10 @@ height: 750px;
     background: transparent;
     position: relative;
     cursor: pointer;
-    left: 600px;
+    left: 610px;
     top: 350px;
     background-color: #007bbd;
-    
+    font-family: var(--text-style);
 }
 
 .btn:hover
