--- a/CSS/about.css
+++ b/CSS/about.css
@@ -28,3 +28,43 @@ p {
 .box1 {
     border: 1px black;
 }
+
+footer {
+    height: 140px;
+    width: 100vw; 
+    background-color: var(--box-bg-color);
+    position: relative;
+    bottom: 0;
+    
+}
+
+footer p {
+    color: var(--main-color);
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.fa {
+    padding: 20px;
+    font-size: 50px;
+    width: 35px;
+    text-align: center;
+    text-decoration: none;
+    margin: 15px 10px;
+
+  }
+
+  
+  [class*="fa"]{
+    background-color: black;
+    color: white;
+  }
+
+
+  .fa:hover {
+    opacity: 0.7;
+
+}
