--- a/CSS/about.css
+++ b/CSS/about.css
@@ -20,7 +20,7 @@ p {
 }
 
 .box {
-    display: flex;
+    display: var(--display-style);
     flex-direction: column;
     align-items: center;
 }
@@ -41,7 +41,7 @@ footer {
 footer p {
     color: var(--main-color);
     font-size: 15px;
-    display: flex;
+    display: var(--display-style);
     justify-content: center;
     align-items: center;
 
@@ -62,7 +62,6 @@ footer p {
     background-color: black;
     color: white;
   }
-
 
   .fa:hover {
     opacity: 0.7;
