--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    display: flex;
+    display: var(--display-text);
     align-items: center;
     gap: 0 6px;
     height: 35px;
@@ -27,7 +27,7 @@ header {
 }
 
 .list ul {
-    display: flex;
+    display: var(--display-text);
     gap: 20px;
     list-style: none;
     width: 100%;
@@ -72,7 +72,7 @@ footer {
 footer p {
     color: var(--main-color);
     font-size: 15px;
-    display: flex;
+    display: var(--display-text);
     justify-content: center;
     align-items: center;
 
