--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -99,6 +99,23 @@ main h1{
     text-decoration: underline;
 }
 
+.scrollToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.scrollToTopBtn.active {
+    display: block;
+}
+
 
 
 
