--- a/CSS/style.css
+++ b/CSS/style.css
@@ -101,3 +101,20 @@ footer p {
     opacity: 0.7;
 
 }
+
+.scrollToTopBtn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 20px;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.scrollToTopBtn.active {
+    display: block;
+}
