--- a/CSS/about.css
+++ b/CSS/about.css
@@ -21,6 +21,10 @@ h2 {
 p { 
     font-family: var(--text-style);
     font-size: 18px;
+    margin-top: 30px;
+    
+    
+    
 }
 
 .box {
@@ -29,13 +33,18 @@ p {
     align-items: center;
 }
 
-.box1 {
-    border: 1px black;
+.box1 {    
     margin-left: auto;
     margin-right: auto;
-    width: 60%;
+    width: 70%;
+    
 }
 
+.boxes {
+    height: 400px;
+
+
+}
 
 .about {
     height: 350px;
